<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/matricula" />

        <EditText
            android:id="@+id/editTextMatricula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/confirmar_senha" />

        <EditText
            android:id="@+id/editTextConfirmarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonCadastro"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioCadastroAluno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aluno"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioCadastroAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrador" />

        </RadioGroup>

        <Button
            android:id="@+id/botaoSolicitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicitar" />

    </LinearLayout>

</ScrollView>