<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- CÓDIGO VAGA -->
        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo" />
        <TextView
            android:id="@+id/textViewCodigoVaga"
            android:layout_below="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- CURSO VAGA -->
        <TextView
            android:id="@+id/textView32"
            android:layout_below="@+id/textViewCodigoVaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cursos" />
        <Spinner
            android:id="@+id/spinnerVagaCurso"
            android:layout_below="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- STATUS VAGA -->
        <TextView
            android:id="@+id/textView10"
            android:layout_below="@+id/spinnerVagaCurso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_vaga" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_below="@+id/textView10"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioStatusVaga" >

            <RadioButton
                android:id="@+id/radioStatusVagaDisponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disponivel"
                android:checked="true" />
            <RadioButton
                android:id="@+id/radioStatusVagaEncerrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Encerrada" />
        </RadioGroup>

        <!-- EMPRESA VAGA -->
        <TextView
            android:id="@+id/textView11"
            android:layout_below="@+id/radioStatusVaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empresa" />
        <EditText
            android:id="@+id/editVagaEmpresa"
            android:layout_below="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- LOCAL VAGA -->
        <TextView
            android:id="@+id/textView12"
            android:layout_below="@+id/editVagaEmpresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_vaga" />
        <EditText
            android:id="@+id/editVagaLocal"
            android:layout_below="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- TITULO VAGA -->
        <TextView
            android:id="@+id/textView13"
            android:layout_below="@+id/editVagaLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo" />

        <EditText
            android:id="@+id/editVagaTitulo"
            android:layout_below="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- DIA VAGA -->
        <TextView
            android:id="@+id/textView14"
            android:layout_below="@+id/editVagaTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia" />

        <!--<com.example.igorl.ececvagasdeestagio.Utils.WeekdaysWidget
            android:id="@+id/widget1"
            android:layout_below="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:editable="true"/>-->

        <LinearLayout
            android:id="@+id/linear_check_dias"
            android:layout_below="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_domingo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domingo"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/checkbox_segunda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_sexta_sabado"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/checkbox_terca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terca"
                android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/checkbox_quarta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quarta_quinta"
                android:layout_weight="1" />
            <CheckBox
                android:id="@+id/checkbox_quinta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quarta_quinta"
                android:layout_weight="1" />
            <CheckBox
                android:id="@+id/checkbox_sexta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_sexta_sabado"
                android:layout_weight="1" />
            <CheckBox
                android:id="@+id/checkbox_sabado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segunda_sexta_sabado"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- HORARIO VAGA -->
        <TextView
            android:id="@+id/textView38"
            android:layout_below="@+id/linear_check_dias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horario" />

        <TextView
            android:id="@+id/textViewVagaHorario1"
            android:layout_below="@+id/textView38"
            android:layout_alignLeft="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/selecionar_inicio"/>
        <TextView
            android:id="@+id/textViewVagaHorario2"
            android:layout_below="@id/textView38"
            android:layout_alignRight="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/selecionar_termino"/>
        <TextView
            android:id="@+id/textViewVagaHorarioInicio"
            android:layout_below="@+id/textViewVagaHorario1"
            android:layout_alignLeft="@+id/textViewVagaHorario1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textViewVagaHorarioFim"
            android:layout_below="@+id/textViewVagaHorario2"
            android:layout_alignRight="@+id/textViewVagaHorario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- ATIVIDADES VAGA -->
        <TextView
            android:id="@+id/textView15"
            android:layout_below="@+id/textViewVagaHorarioInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atividades_vaga" />
        <EditText
            android:id="@+id/editVagaAtividades"
            android:layout_below="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- REQUISITOS VAGA -->
        <TextView
            android:id="@+id/textView16"
            android:layout_below="@+id/editVagaAtividades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requisitos_vaga" />
        <EditText
            android:id="@+id/editVagaRequisitos"
            android:layout_below="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- NUMERO VAGA -->
        <TextView
            android:id="@+id/textView17"
            android:layout_below="@+id/editVagaRequisitos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero_vaga" />
        <EditText
            android:id="@+id/editVagaNumero"
            android:layout_below="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- VALOR BOLSA VAGA -->
        <TextView
            android:id="@+id/textView18"
            android:layout_below="@+id/editVagaNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_bolsa_vaga" />
        <EditText
            android:id="@+id/editVagaValor"
            android:layout_below="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <!-- INFORMAÇÕES VAGA -->
        <TextView
            android:id="@+id/textView19"
            android:layout_below="@+id/editVagaValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacoes_vaga" />
        <EditText
            android:id="@+id/editVagaInformacoes"
            android:layout_below="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- IMAGEM VAGA -->
        <TextView
            android:id="@+id/textView21"
            android:layout_below="@+id/editVagaInformacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imagem_vaga" />
        <TextView
            android:id="@+id/textViewSelecionarFoto"
            android:layout_below="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/selecione" />
        <ImageView
            android:id="@+id/imagemDivulgacaoVaga"
            android:layout_below="@+id/textViewSelecionarFoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/ic_image" />

        <!-- DATA VAGA -->
        <TextView
            android:id="@+id/textView20"
            android:layout_below="@+id/imagemDivulgacaoVaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_vaga"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/textViewDataVaga"
            android:layout_below="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/botaoSalvarVaga"
            android:layout_below="@+id/textViewDataVaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar" />

    </RelativeLayout>

</ScrollView>