<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" >

    <ProgressBar
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/usuario_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome" />
            <EditText
                android:id="@+id/textNomeUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matricula" />
            <EditText
                android:id="@+id/textMatriculaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/textEmailUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senha" />

            <EditText
                android:id="@+id/textSenhaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_senha" />

            <EditText
                android:id="@+id/textConfirmarSenhaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewTipoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_usuario" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButtonUsuariosTipo"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioUsuarioTipoAluno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aluno"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioUsuarioTipoAdmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/administrador" />

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/botaoSalvarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar" />

                <Button
                    android:id="@+id/botaoEditarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editar" />

            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>