<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_below="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@+id/campoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/campoSenha"
        android:layout_below="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/botaoLogin"
        android:layout_below="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/textViewRecuperarSenha"
        android:layout_below="@+id/botaoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"
        android:text="@string/esqueci_senha" />

    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_below="@+id/textViewRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/cadastar" />

</RelativeLayout>